--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Proyecto final JS Esteban Heredia</h1>
     
         <div>
-            <form action="" id="turno-completo">
+            <form action="/rediccion" id="turno-completo">
                 <div>
                     <label for="nombre">Ingrese su Nombre:</label>
                     <input type="text" placeholder="Nombre" id="nombre">
@@ -34,7 +34,7 @@
                     <input type="time" name="hora" id="hora">
                 </div>
                 <div>
-                    <button type="submit">Agendar Turno!</button>
+                    <button id="boton" type="submit" onclick="capturar();">Agendar Turno!</button>
                 </div>
             </form>
         </div>
