--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <input type="time" name="hora" id="hora">
                 </div>
                 <div>
-                    <button id="boton" type="submit" onclick="capturar();">Agendar Turno!</button>
+                    <button id="boton" type="reset" onclick="capturar();">Agendar Turno!</button>
                 </div>
             </form>
         </div>
