--- a/index.html
+++ b/index.html
@@ -34,13 +34,20 @@
                     <input type="time" name="hora" id="hora">
                 </div>
                 <div>
-                    <button id="boton" type="reset" onclick="capturar();">Agendar Turno!</button>
+                    <button id="boton" type="reset" >Agendar Turno!</button>
                 </div>
             </form>
         </div>
 
         <div id="turnoGenerado">
 
+        </div>
+
+        <div>
+            <input type="search" id="buscar" placeholder="Buscar turno">
+            <div id="mostrarBusqueda">
+                <table id="tabla"></table>
+            </div>
         </div>
     </main>
     
